[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/fallingplatform.gd" type="Script" id=1]
[ext_resource path="res://sprites/platform.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 317.172, 112.839 )

[sub_resource type="Animation" id=2]
resource_name = "fallingplatform"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:root_node")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.10957 ),
"update": 1,
"values": [ NodePath("..") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( -10, 0 ), Vector2( 10, 0 ), Vector2( -10, 0 ), Vector2( 10, 0 ), Vector2( -10, 0 ), Vector2( 10, 0 ), Vector2( -10, 0 ), Vector2( 10, 0 ), Vector2( -10, 0 ) ]
}

[node name="FalingPlatform" type="KinematicBody2D"]
position = Vector2( -119.878, 118.301 )
scale = Vector2( 0.2, 0.160001 )
motion/sync_to_physics = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -10, 0 )
scale = Vector2( 1.08134, 0.940004 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.5636, -3.5636 )
scale = Vector2( 0.299988, 0.250001 )
shape = SubResource( 1 )
one_way_collision = true
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fallingplatform = SubResource( 2 )

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
